// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<ForwardRef(Link)
  className="measures-link"
  to={
    {
      "pathname": "/component_measures",
      "search": "?id=foo&metric=security_rating",
    }
  }
>
  <MeasuresIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.measures_link
  </span>
</ForwardRef(Link)>
`;

exports[`renders 2`] = `
<ForwardRef(Link)
  className="measures-link"
  to={
    {
      "pathname": "/component_measures",
      "search": "?id=foo&metric=security_rating",
    }
  }
>
  <MeasuresIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    Foo
  </span>
</ForwardRef(Link)>
`;

exports[`renders 3`] = `
<ForwardRef(Link)
  className="measures-link"
  to={
    {
      "pathname": "/component_measures",
      "search": "?id=foo&metric=security_rating",
    }
  }
>
  <MeasuresIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.measures_link
  </span>
</ForwardRef(Link)>
`;
